--- a/about.html
+++ b/about.html
@@ -1,126 +1,218 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
 
-    <!-- Links -->
-  <!-- bootstrap links -->
+body {
+  background-color: #f1f1f1;
+  padding: 20px;
+  font-family: Arial;
+}
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+/* Center website */
+.main {
+  max-width: 1000px;
+  margin: auto;
+}
 
-  <!-- Font Awesome links -->
+h1 {
+  font-size: 50px;
+  word-break: break-all;
+}
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://kit.fontawesome.com/6c2bd266c9.js" crossorigin="anonymous"></script>
+.row {
+  margin: 10px -16px;
+}
 
+/* Add padding BETWEEN each column */
+.row,
+.row > .column {
+  padding: 8px;
+}
 
-    <style>
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 33.33%;
+  display: none; /* Hide all elements by default */
+}
 
-              * {
-            box-sizing: border-box;
-          }
+/* Clear floats after rows */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
-          .heading{
-          color:whitesmoke;
-          position: absolute;
-          left: 50%;
-          transform: translatex(-50%);
-          }
-              /* Navigation Bar */
+/* Content */
+.content {
+  background-color: white;
+  padding: 10px;
+}
 
-            .logo_home {
-              margin: 0;
-              padding:0;
-              width: 10rem;
-              height: 4.5rem;
-              background:white;
-            }
+/* The "show" class is added to the filtered elements */
+.show {
+  display: block;
+}
 
-          .navbar{
-            background:#DF2027;
-          }
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: white;
+  cursor: pointer;
+}
 
-          .nav-link{
-            text-decoration:none;
-            color:white;
-          }
+.btn:hover {
+  background-color: #ddd;
+}
 
-          .nav-link:hover{
-            color:grey;
-          }
+.btn.active {
+  background-color: #666;
+  color: white;
+}
+</style>
+</head>
+<body>
 
-          .active{
-            border-right:0.1rem solid white;
-          }
+<!-- MAIN (Center website) -->
+<div class="main">
 
-    </style>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <!-- Navigation Bar -->
+<h1>MYLOGO.COM</h1>
+<hr>
 
+<h2>PORTFOLIO</h2>
 
-<nav class="navbar sticky-top navbar-expand-md">
-  <a class="navbar-brand" href="index.html"><img class="logo_home" src="SALogo.png" alt=""></a>
-  <h1 class="heading mx-auto">Apparel</h1>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<div id="myBtnContainer">
+  <button class="btn active" onclick="filterSelection('all')"> Show all</button>
+  <button class="btn" onclick="filterSelection('nature')"> Nature</button>
+  <button class="btn" onclick="filterSelection('cars')"> Cars</button>
+  <button class="btn" onclick="filterSelection('people')"> People</button>
+</div>
 
-
-
-
-  <div class="collapse  navbar-collapse" id="navbarToggler">
-    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-
-      <li class="nav-item active">
-        <a class="nav-link py-0" href="events.html">About</a>
-      </li>
-
-
-      <li class="nav-item">
-        <a class="nav-link py-0" href="contact.html">Contact</a>
-      </li>
-    </ul>
-
+<!-- Portfolio Gallery Grid -->
+<div class="row">
+  <div class="column nature">
+    <div class="content">
+      <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%">
+      <h4>Mountains</h4>
+      <p>Lorem ipsum dolor..</p>
+    </div>
   </div>
-</nav>
+  <div class="column nature">
+    <div class="content">
+    <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
+      <h4>Lights</h4>
+      <p>Lorem ipsum dolor..</p>
+    </div>
+  </div>
+  <div class="column nature">
+    <div class="content">
+    <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
+      <h4>Forest</h4>
+      <p>Lorem ipsum dolor..</p>
+    </div>
+  </div>
 
+  <div class="column cars">
+    <div class="content">
+      <img src="/w3images/cars1.jpg" alt="Car" style="width:100%">
+      <h4>Retro</h4>
+      <p>Lorem ipsum dolor..</p>
+    </div>
+  </div>
+  <div class="column cars">
+    <div class="content">
+    <img src="/w3images/cars2.jpg" alt="Car" style="width:100%">
+      <h4>Fast</h4>
+      <p>Lorem ipsum dolor..</p>
+    </div>
+  </div>
+  <div class="column cars">
+    <div class="content">
+    <img src="/w3images/cars3.jpg" alt="Car" style="width:100%">
+      <h4>Classic</h4>
+      <p>Lorem ipsum dolor..</p>
+    </div>
+  </div>
+
+  <div class="column people">
+    <div class="content">
+      <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
+      <h4>Girl</h4>
+      <p>Lorem ipsum dolor..</p>
+    </div>
+  </div>
+  <div class="column people">
+    <div class="content">
+    <img src="/w3images/people2.jpg" alt="Car" style="width:100%">
+      <h4>Man</h4>
+      <p>Lorem ipsum dolor..</p>
+    </div>
+  </div>
+  <div class="column people">
+    <div class="content">
+    <img src="/w3images/people3.jpg" alt="Car" style="width:100%">
+      <h4>Woman</h4>
+      <p>Lorem ipsum dolor..</p>
+    </div>
+  </div>
+<!-- END GRID -->
+</div>
+
+<!-- END MAIN -->
+</div>
 
 <script>
-  // // Slide Navbar Down End
-  $(document).ready(function() {
-    $("#myTab li:eq(0) a").tab('show'); // show 2nd tab on page load
+filterSelection("all")
+function filterSelection(c) {
+  var x, i;
+  x = document.getElementsByClassName("column");
+  if (c == "all") c = "";
+  for (i = 0; i < x.length; i++) {
+    w3RemoveClass(x[i], "show");
+    if (x[i].className.indexOf(c) > -1) w3AddClass(x[i], "show");
+  }
+}
+
+function w3AddClass(element, name) {
+  var i, arr1, arr2;
+  arr1 = element.className.split(" ");
+  arr2 = name.split(" ");
+  for (i = 0; i < arr2.length; i++) {
+    if (arr1.indexOf(arr2[i]) == -1) {element.className += " " + arr2[i];}
+  }
+}
+
+function w3RemoveClass(element, name) {
+  var i, arr1, arr2;
+  arr1 = element.className.split(" ");
+  arr2 = name.split(" ");
+  for (i = 0; i < arr2.length; i++) {
+    while (arr1.indexOf(arr2[i]) > -1) {
+      arr1.splice(arr1.indexOf(arr2[i]), 1);
+    }
+  }
+  element.className = arr1.join(" ");
+}
+
+
+// Add active class to the current button (highlight it)
+var btnContainer = document.getElementById("myBtnContainer");
+var btns = btnContainer.getElementsByClassName("btn");
+for (var i = 0; i < btns.length; i++) {
+  btns[i].addEventListener("click", function(){
+    var current = document.getElementsByClassName("active");
+    current[0].className = current[0].className.replace(" active", "");
+    this.className += " active";
   });
-
-
-  $(function () {
-          $(window).scroll(function () {
-
-              if ($(this).scrollTop() < 1000) {
-                  $('.navbar-brand img').attr('src','SALogoRed.png');
-              }
-          })
-      });
-
-//       $(function() {
-//
-// $(window).scroll(function() {
-//   var x = $(window).scrollTop();
-//
-//   if (x > 100) {
-//     $(".navbar-brand img").show();
-//   } else {
-//     $(".navbar-brand img").hide();
-//   }
-//
-// });
-//
-// });
-
+}
 </script>
 
-  </body>
+</body>
 </html>
