--- a/apparel.html
+++ b/apparel.html
@@ -194,8 +194,8 @@ font-style: italic;
     }
 
     .product-img{
-      width:80%;
-      height:18rem;
+      width:auto;
+      height:11rem;
       background-color: transparent;
     }
 
